option('buildtest', type: 'boolean', value: true, description: 'Build tests')
option('max-reports', type: 'integer', min: 1, value: 10,
       description: 'Max number of Reports')
option('max-reading-parameters', type: 'integer', min: 1, value: 200,
       description: 'Max number of reading parameters in single report')
option('min-interval', type: 'integer', min: 1, value: 1000,
       description: 'Minimal value of interval in milliseconds')
option('max-triggers', type: 'integer', min: 1, value: 10,
       description: 'Max number of Triggers')
